--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
     <div class="container">
 
-      <div class="logo float-left">
-        <a href="#header" class="scrollto"><img src="img/favicon.png" alt="" class="img-fluid"></a>
+      <div class="logo float-left" >
+        <a href="#header" class="scrollto" ><img src="img/favicon.png" alt="" class="img-fluid" id="rotate"></a>
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
